welcome.lessons.welcome.bat.bool2.CaughtSpeeding.scala.error
caughtSpeeding:21: error: type mismatch;
 found   : Unit
 required: Int
    if (speed >85){
    ^caughtSpeeding:14: error: type mismatch;
 found   : Unit
 required: Int
  if (isBirthday==true) {
  ^